tests/machine/x/go/group_by_multi_join.error
run error: exit status 1
# command-line-arguments
tests/machine/x/go/group_by_multi_join.go:12:15: undefined: NationsItem
tests/machine/x/go/group_by_multi_join.go:15:5: undefined: NationsItem
tests/machine/x/go/group_by_multi_join.go:20:17: undefined: SuppliersItem
tests/machine/x/go/group_by_multi_join.go:23:5: undefined: SuppliersItem
tests/machine/x/go/group_by_multi_join.go:28:16: undefined: PartsuppItem
tests/machine/x/go/group_by_multi_join.go:33:5: undefined: PartsuppItem
tests/machine/x/go/group_by_multi_join.go:38:5: undefined: PartsuppItem
tests/machine/x/go/group_by_multi_join.go:44:23: undefined: Filtered
tests/machine/x/go/group_by_multi_join.go:45:16: undefined: Filtered
tests/machine/x/go/group_by_multi_join.go:57:34: undefined: Filtered
tests/machine/x/go/group_by_multi_join.go:57:34: too many errors
